# The-Story-1

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
game/: display.py  input_utils.py  save_data.py  script.py  story.py
