[project]
name = "the-story-1"
version = "0.1.0"
description = "Terminal-based interactive story/game"
authors = [
    {name = "QuQuLa89"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.0)"
]
